# attoclaw-build

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
include/attoclaw/: agent.hpp  atomic_queue.hpp  channels.hpp  common.hpp  config.hpp  context.hpp  cron.hpp  discord_channel.hpp  email_channel.hpp  events.hpp  external_cli.hpp  heartbeat.hpp  http.hpp  memory.hpp  message_bus.hpp  metrics.hpp  provider.hpp  session.hpp  skills.hpp  slack_channel.hpp  subagent.hpp  telegram_channel.hpp  tools.hpp  vision.hpp  whatsapp_channel.hpp
scripts/: benchmark_compare.py  dashboard_server.py  install.sh
src/: main.cpp
tests/: tests.cpp
